# git-branch-sweeper

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  makefile.inc  pyproject.toml  setup.cfg
git_branch_cleaner/: cli.py  git.py  shell.py  styles.py
git_branch_sweeper/: cli.py  git.py  process.py  shell.py  styles.py  utils.py
src/git_branch_cleaner/: __main__.py  cli.py  git.py  main.py  styles.py
src/git_delete_branch/: __main__.py  main.py
