[tool.poetry]
name = "git-branch-sweeper"
version = "1.0.0"
description = "Interactive CLI tool to delete multiple local git branches at once."
authors = ["Ren Dela Cruz <ren_delacruz@outlook.com>"]
readme = "README.md"
repository = "https://github.com/RenDelaCruz/git-branch-sweeper"

[tool.poetry.dependencies]
python = "^3.10"
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-branch-sweeper = "git_branch_sweeper.cli:main"
